--- a/Project/package.json
+++ b/Project/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
+    "pip": "0.0.1",
     "promise": "^8.0.3",
     "q": "^1.5.1"
   }
